--- a/code/format.sh.j2
+++ b/code/format.sh.j2
@@ -51,15 +51,15 @@ echo ${arch_repo} > /mnt/etc/pacman.d/mirrorlist
 arch-chroot /mnt grub-install --target=x86_64-efi --efi-directory=/boot/efi/ --bootloader-id=arch_grub --recheck
 
 eval $(blkid -o udev ${device}3)
-echo "UUID=${ID_FS_PARTUUID}  /   ${ID_FS_TYPE} rw,noatime,ssd,space_cache,subvol=archlinux 0 0" > /mnt/etc/fstab
+echo "UUID=${ID_FS_UUID}  /   ${ID_FS_TYPE} rw,noatime,ssd,space_cache,subvol=archlinux 0 0" > /mnt/etc/fstab
 
-echo "UUID=${ID_FS_PARTUUID}  /home   ${ID_FS_TYPE} rw,noatime,ssd,space_cache,subvol=home 0 0" >>/mnt/etc/fstab
+echo "UUID=${ID_FS_UUID}  /home   ${ID_FS_TYPE} rw,noatime,ssd,space_cache,subvol=home 0 0" >>/mnt/etc/fstab
 
 eval $(blkid -o udev ${device}2)
-echo "UUID=${ID_FS_PARTUUID}  /boot/ ${ID_FS_TYPE}  rw,realtime,block_validity 0 0" >> /mnt/etc/fstab
+echo "UUID=${ID_FS_UUID}  /boot/ ${ID_FS_TYPE}  rw,realtime,block_validity 0 0" >> /mnt/etc/fstab
 
 eval $(blkid -o udev ${device}1)
-echo "UUID=${ID_FS_PARTUUID}  /boot/efi/ ${ID_FS_TYPE}  rw,realtime 0 0" >> /mnt/etc/fstab
+echo "UUID=${ID_FS_UUID}  /boot/efi/ ${ID_FS_TYPE}  rw,realtime 0 0" >> /mnt/etc/fstab
 
 genfstab /mnt | grep efivars >> /mnt/etc/fstab
 
@@ -68,7 +68,7 @@ cat > /mnt/preboot.sh << EOF
 #!/bin/sh
 mkdir /root/.ssh && chmod 700 /root/.ssh && echo "${ssh_key}" > /root/.ssh/authorized_keys && chmod 600 /root/.ssh/authorized_keys
 
-grub_cmdline_linux="root=UUID=${ID_FS_PARTUUID}"
+grub_cmdline_linux="root=UUID=${ID_FS_UUID}"
 sed -e 's/GRUB_CMDLINE_LINUX=.*/GRUB_CMDLINE_LINUX=${grub_cmdline_linux}/' -i /etc/default/grub
 grub-mkconfig -o /boot/grub/grub.cfg
 
