--- a/code/format.sh.j2
+++ b/code/format.sh.j2
@@ -1,4 +1,5 @@
 #!/bin/bash
+arch_repo='http://mir.archlinux.fr/$repo/os/$arch'
 device="{{ format_device }}"
 locale="{{ format_locale }}"
 keymap="{{ format_keymap }}"
@@ -6,7 +7,6 @@ ssh_key="{{ format_ssh_key }}"
 locales=()
 locales+=("{{ format_locale }}")
 locales+=("en_US.UTF-8")
-
 packages="base efibootmgr grub vim tmux btrfs-progs dosfstools openssh"
 
 parted -s ${device} \
@@ -45,7 +45,9 @@ mkdir -p /mnt/boot/ && \
     mkdir /mnt/boot/efi && \
     mount ${device}1 /mnt/boot/efi && \
 
+echo ${arch_repo} > /etc/pacman.d/mirrorlist
 pacstrap /mnt ${packages} || exit 1
+echo ${arch_repo} > /mnt/etc/pacman.d/mirrorlist
 arch-chroot /mnt grub-install --target=x86_64-efi --efi-directory=/boot/efi/ --bootloader-id=arch_grub --recheck
 
 eval $(blkid -o udev ${device}3)
